Contact us section

--- a/index.html
+++ b/index.html
@@ -168,28 +168,28 @@
 
 		<!--- Contact us -->
 		
-		<section class="section_full_width" id="contact_me">
-			<h1 id="contact_me_h1">Vill du komma i kontakt med oss?</h1>
+		<section class="section_full_width" id="contact_us">
+			<h1 id="contact_us_h1"> </h1>
 			<div class="contact_us_box">
-				<h3>Chatta med oss</h3>
+				<a href="http://890622.github.io/typeform.html"><button class="button large_button bluegrey_button" id="signup_button">Chat with us</button></a>
 				<div class="contact_us_textbox">
-					Det enklaste sättet att få ett snabbt svar på din fråga är att starta en chat med oss. Vi svarar oftast inom en minut!
+					The fastest way to get in touch with us is thru our chat. We usually respond within 1 minute!
 				</div>
-				<a href="http://890622.github.io/typeform.html"><button class="button medium_button orange_button" id="signup_button">Starta chat</button></a>
+	
 			</div>
 			<div class="contact_us_box">
-				<h3>Maila oss</h3>
+				<a href="http://890622.github.io/typeform.html"><button class="button large_button" id="signup_button">Send us an email</button></a>
 				<div class="contact_us_textbox">
-					Du kan även maila din fråga till oss. Vi svarar alltid samma dag och oftast inom mindre än en timme!
+					You can also shoot us an email. We respond the same day usually within less than one hour!
 				</div>
-				<a href="http://890622.github.io/typeform.html"><button class="button medium_button grey_button" id="signup_button">Skicka mail</button></a>
+				
 			</div>
 			<div class="contact_us_box">
-				<h3>Ring oss</h3>
+				<h1 style="margin-top: -5px;" id="phone_number">+46 73-622 69 70</h1>
 				<div class="contact_us_textbox">
-					Vill du prata direkt med oss kan du när som helst ringa. Skulle det vara så att vi inte svarar så ringer vi upp!
+					Wanna talk directly with us? Give us a call on the number above at any time!
 				</div>
-				<h1 style="margin-top: -5px;" id="phone_number">073-622 69 70</h1>
+				
 			</div>
 
 		<!--- Tawk.to -->
