--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							Eget tincidunt nibh pulvinar a curabitur aliquet.</p>
 					</div>
 					<div class="template_textbox_price">
-						<a href="www.google.com">
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GSSTSE3PVRQBJ">
 						<button class="button medium_button xlarge_button grey_button" id="buy_button">
 							Buy Now
 						</button></a>
@@ -150,7 +150,7 @@
 							Eget tincidunt nibh  aliquet quam id dui.</p>
 					</div>
 					<div class="template_textbox_price">
-						<a href="www.google.com">
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A48H7C5B4XDPA">
 						<button class="button medium_button xlarge_button grey_button" id="buy_button">
 							Buy Now
 						</button></a>
