--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 				<div class="new_imac_section_textbox" id="new_imac_section_textbox_desktop">
 					<h3>Integrated payment solution</h3>
-					<p>All websites are equipped with an integrated and activated PayPal payment solution. Howeverr admins can easilly switch over to, or add, Stripe and Klarna as well from the admin dashboard.</p>
+					<p>All websites are equipped with an integrated and activated PayPal payment solution. In addition, admins can easilly switch over to, or add, Stripe and Klarna as well from the admin dashboard.</p>
 					<!--- Buttonbox -->
 						<div class="new_imac_section_textbox_buttonbox">
 							<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/AM_SbyPP_mc_vs_ms_ae_UK.png">
@@ -77,7 +77,7 @@
 				
 				<div class="new_imac_section_textbox" id="new_imac_section_textbox_mobile">
 					<h3>Integrated payment solution</h3>
-					<p>All websites are equipped with an integrated and activated PayPal payment solution. Howeverr admins can easilly switch over to, or add, Stripe and Klarna as well from the admin dashboard.</p>
+					<p>All websites are equipped with an integrated and activated PayPal payment solution. In addition, admins can easilly switch over to, or add, Stripe and Klarna as well from the admin dashboard.</p>
 					<!--- Buttonbox -->
 						<div class="new_imac_section_textbox_buttonbox">
 							<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/AM_SbyPP_mc_vs_ms_ae_UK.png">
