--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 					<p> Simple straightforward design that focuses on products instead of visual noice. The large header image makes a powerful visual impression on the visitor. <br><br>
 					The shallow two-page-structure drives visitors towards purchase.</p>
 						<!--- Buttonbox -->
-						<div class="new_imac_section_textbox_buttonbox">
+						<!-- <div class="new_imac_section_textbox_buttonbox">
 							<a href="http://890622.github.io/signup.html"><button class="button large_button grey_button">Select your design</button>
 							</a>
-						</div>
+						</div> -->
 				</div>
 
 		</section>
