--- a/index.html
+++ b/index.html
@@ -169,25 +169,19 @@
 		<!--- Contact us -->
 		
 		<section class="section_full_width" id="contact_us">
-			<h1 id="contact_us_h1"> </h1>
-			<div class="contact_us_box">
-				<a href="http://890622.github.io/typeform.html"><button class="button large_button bluegrey_button" id="signup_button">Chat with us</button></a>
-				<div class="contact_us_textbox">
-					The fastest way to get in touch with us is thru our chat. We usually respond within 1 minute!
-				</div>
-	
-			</div>
-			<div class="contact_us_box">
-				<a href="http://890622.github.io/typeform.html"><button class="button large_button" id="signup_button">Send us an email</button></a>
-				<div class="contact_us_textbox">
-					You can also shoot us an email. We respond the same day usually within less than one hour!
-				</div>
-				
-			</div>
-			<div class="contact_us_box">
-				<h1 style="margin-top: -5px;" id="phone_number">+46 73-622 69 70</h1>
-				<div class="contact_us_textbox">
-					Wanna talk directly with us? Give us a call on the number above at any time!
+			<div class="dark_opacity" id="contact_us_dark_opactiy">
+				<div id="contact_new">
+					<h2>Contact us</h2>
+					<p>Feel free to contact us at any time!</p>
+					<a href="https://embed.tawk.to/5655e6315d0ca158310e0c2e/default">
+						<img src="http://s23.postimg.org/h1ka4s4on/speech_bubble_5_64.png">
+					</a>
+					<a href="mailto:info@anywebstore.com?Subject=I%20have%20a%20question...">
+						<img src="http://s7.postimg.org/4u8a4f6nb/email_5_64.png">
+					</a>
+					<a href="tel:+4673622670">
+						<img src="http://s14.postimg.org/frixj2rnh/phone_73_64.png">
+					</a>
 				</div>
 				
 			</div>
