Setting up chat button

--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@
 				<div id="contact_new">
 					<h2>Contact us</h2>
 					<p>Feel free to contact us at any time!</p>
-					<a href="https://embed.tawk.to/5655e6315d0ca158310e0c2e/default">
-						<img src="http://s23.postimg.org/h1ka4s4on/speech_bubble_5_64.png">
+
+					<!--Start of Tawk.to Status Code-->
+<script type="text/javascript">Tawk_API.onStatusChange = function (status){if(status === 'online'){document.getElementById('status').innerHTML = '<a href="#" onclick="toggleChat()">Online - Click to chat</a>';}else if(status === 'away'){document.getElementById('status').innerHTML = 'We are currently away';}else if(status === 'offline'){document.getElementById('status').innerHTML = 'Live chat is Offline';}};
+</script>
+<!--End of Tawk.to Status Code -->
+
+					<a href="#chat" onclick="toggleChat()"> <img src="http://s23.postimg.org/h1ka4s4on/speech_bubble_5_64.png">
 					</a>
 					<a href="mailto:info@anywebstore.com?Subject=I%20have%20a%20question...">
 						<img src="http://s7.postimg.org/4u8a4f6nb/email_5_64.png">
