--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
 		<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
+		<!--- Takt.to -->
+
+		<script type="text/javascript">
+
+		function toggleChat() {
+
+		Tawk_API.toggle(); return false;
+
+		}
+
+		</script>
+
+
 	</head>
 	
 	<body>
