--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="new_imac_section_textbox">
 					<h3>Airbrushed simplistic design</h3>
 					<p> Simple straightforward design that focuses on products instead of visual noice. The large header image makes a powerful visual impression on the visitor. <br><br>
-					The shallow two-page-structure drives visitors towards purchase.</p>
+					The shallow two-page-structure minimizes distraction and drives visitors towards purchase.</p>
 						<!--- Buttonbox -->
 						<!-- <div class="new_imac_section_textbox_buttonbox">
 							<a href="http://890622.github.io/signup.html"><button class="button large_button grey_button">Select your design</button>
