Changed copy under products

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="template_textbox_description">
 						<h3>Rainy store - $10/month</h3>
 						<p>Design optimzed for one-product websites.<br>
-							Eget tincidunt nibh pulvinar a curabitur aliquet.</p>
+						   Try it today with no contract, cancel whenever you want.</p>
 					</div>
 					<div class="template_textbox_price">
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GSSTSE3PVRQBJ">
@@ -160,7 +160,7 @@
 					<div class="template_textbox_description">
 						<h3>Jeansy store - $10/month</h3>
 						<p>Design optimzed for multiple-product websites.<br>
-							Eget tincidunt nibh  aliquet quam id dui.</p>
+						   Try it today with no contract, cancel whenever you want.</p>
 					</div>
 					<div class="template_textbox_price">
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A48H7C5B4XDPA">
