--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 		<!--- jQuery -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="jquery.localscroll.js" type="text/javascript"></script> 
+		<script src="jquery.scrollTo.js" type="text/javascript"></script> 
 
 		<!--- CSS FILES -->
 
 		<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
+
+		<!--- Sroll feature -->
+
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
+
+		<script type="text/javascript">
+		$(document).ready(function() {
+		   $('#codeword').localScroll({duration:800});
+		});
+		</script>
+
 
 		<!--- FONTS -->
 
@@ -44,7 +56,9 @@
 					Looking to create a website?<br>
 					<span>We already did it for you.</span><br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
-					<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
+					<a href="#codeword">
+						<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
+					</a>
 				</div>
 			</div>
 			</div>
@@ -117,7 +131,7 @@
 		</section>
 
 
-
+<A NAME="codeword">
 
 
 		<!--- Templates -->
