--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 		<!--- jQuery -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="jquery.localscroll.js" type="text/javascript"></script> 
+		<script src="jquery.scrollTo.js" type="text/javascript"></script> 
+
+		<script type="text/javascript">
+		$(document).ready(function() {
+		   $('#header_dark_opactiy').localScroll({duration:800});
+		});
+		</script>
 
 		<!--- CSS FILES -->
 
@@ -41,13 +49,14 @@
 		<div class="header" id="landing_page_header">
 			<div class="dark_opacity" id="header_dark_opactiy">
 				<div id="header_big_text"> 
-					Looking to create a website?<br>
+					Looking to create a website??<br>
 					<span>We already did it for you.</span><br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
 					<a href="#codeword">
 						<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
 					</a>
 				</div>
+				<A NAME="codeword">
 			</div>
 			</div>
 		</div>
@@ -119,7 +128,7 @@
 		</section>
 
 
-<A NAME="codeword">
+
 
 
 		<!--- Templates -->
@@ -247,14 +256,7 @@
 		  ga('send', 'pageview');
 		</script>
 
-		<script src="jquery.localscroll.js" type="text/javascript"></script> 
-		<script src="jquery.scrollTo.js" type="text/javascript"></script> 
 
-		<script type="text/javascript">
-		$(document).ready(function() {
-		   $('#codeword').localScroll({duration:800});
-		});
-		</script>
 
 		
 </body>
