--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<script type="text/javascript">
 		$(document).ready(function() {
-		   $('#landing_page_header').localScroll({duration:800});
+		   $('#header_big_text').localScroll({duration:800});
 		});
 		</script>
 
