--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="header" id="landing_page_header">
 			<div class="dark_opacity" id="header_dark_opactiy">
 				<div id="header_big_text"> 
-					Looking to create a website?<br>
+					Looking to create a website??<br>
 					<span>We already did it for you.</span><br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
 					<a href="#codeword">
