Added meta tags

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
 
 		</script>
 
+		<!--- Meta tags -->
+
+		<meta property="og:image" content="http://s30.postimg.org/dzzoy6pkx/Publishing_post.jpg" />
+
+		<meta property="og:description" content="Looking to create a website?
+		We already did it for you.
+		Your awesome looking website is ready to use. For only $10/month." />
+
+		<meta property="og:url"content="http://www.anywebstore.com/" />
+
+		<meta property="og:title" content="Designed website for $10" />
+
 
 	</head>
 	
