--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 
 		<meta property="og:image" content="http://s30.postimg.org/dzzoy6pkx/Publishing_post.jpg" />
 
-		<meta property="og:description" content="Looking to create a website?
-		We already did it for you.
-		Your awesome looking website is ready to use. For only $10/month." />
+		<meta property="og:description" content="Looking to create a website? We already did it for you.Your awesome looking website is ready to use. For only $10/month." />
 
 		<meta property="og:url"content="http://www.anywebstore.com/" />
 
@@ -130,7 +128,7 @@
 				
 				<div class="new_imac_section_textbox" id="macbook_air_textbox">
 					<h3>Easy-to-use admin dashboard</h3>
-					<p>All websites are built on Tictaisl platform which gives admins access to Tictails super simple admin dashboard.<br><br>
+					<p>All websites are built on Tictails platform which gives admins access to Tictails super simple admin dashboard.<br><br>
 					Inside the admin dashboard admins can easilly change any information related to products, store name, URL, terms, shipping and much more.</p>
 
 
@@ -153,7 +151,7 @@
 				<div class="template_textbox">
 					<div class="template_textbox_description">
 						<h3>Rainy store - $10/month</h3>
-						<p>Design optimzed for one-product websites.<br>
+						<p>Design optimized for one-product websites.<br>
 						   Try it today with no contract, cancel whenever you want.</p>
 					</div>
 					<div class="template_textbox_price">
