changing anchor link

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 					Looking to create a website?<br>
 					<span>We already did it for you.</span><br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
-					<a href="#codeword">
+					<a href="##">
 						<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
 					</a>
 				</div>
-				<A NAME="codeword">
+				<A NAME="#">
 			</div>
 			</div>
 		</div>
